--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "proxy": "https://quote-backend.onrender.com",
+    "proxy": "http://localhost:5000",
     "name": "frontend",
     "version": "0.1.0",
-
+    "private": true,
     "dependencies": {
-       
+        "'": "file:mui/material/Box'",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@material-ui/core": "^4.12.4",
