--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://Ashish252-del.github.io/Quote-frontend",
     "proxy": "https://quote-backend.onrender.com",
     "name": "frontend",
     "version": "0.1.0",
@@ -21,6 +22,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "predeploy" : "npm run build",
+        "deploy" : "gh-pages -d build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
