--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-    "homepage": "https://Ashish252-del.github.io/Quote-frontend",
     "proxy": "https://quote-backend.onrender.com",
+    "homepage": "https://Ashish252-del.github.io/Quote-frontend",
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "'": "file:mui/material/Box'",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@material-ui/core": "^4.12.4",
         "@mui/icons-material": "^5.10.3",
-        "@mui/material": "^5.10.3",
+        "@mui/material": "^5.10.16",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
@@ -22,8 +21,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "predeploy" : "npm run build",
-        "deploy" : "gh-pages -d build",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -45,5 +44,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^4.0.0"
     }
 }
